MODDICORE-440 Mode of Issuance not being set with MARC to Instance Mapping (#389)
* MODDICORE-440 Mode of Issuance not being set with MARC to Instance Mapping

* fix tests

* change log lvl

* reduce code smells

* reduce code smells